test/unit-tests/errors/function-call-match-error.spec.d.ts
export declare class FunctionCallMatchErrorTests {
    shouldBeCalledMessage(): void;
    shouldNotBeCalledMessage(): void;
    shouldBeCalledWithArgsMessage(args: Array<any>): void;
    shouldNotBeCalledWithArgsMessage(args: Array<any>): void;
}
